# NOTTSAIR-25-26

./: .gitignore  README.md
Missions/Static Inspection A/: README.md
Missions/Static Inspection A/static_a_ws/src/static_a/: CMakeLists.txt  package.xml
Missions/Static Inspection A/static_a_ws/src/static_a/config/: static_a.yaml
Missions/Static Inspection A/static_a_ws/src/static_a/launch/: static_a.launch.py
Missions/Static Inspection A/static_a_ws/src/static_a/src/: static_inspection_a.cpp
Perception/Yolo/yolo_depth_ws/src/yolo_depth/: CMakeLists.txt  README.md  package.xml
Perception/Yolo/yolo_depth_ws/src/yolo_depth/config/: yolo_depth.yaml
Perception/Yolo/yolo_depth_ws/src/yolo_depth/launch/: yolo_depth.launch.py
Perception/Yolo/yolo_depth_ws/src/yolo_depth/src/: yolo_depth_node.cpp
Perception/Yolo/yolo_ws/src/yolo_infer/: CMakeLists.txt  README.md  package.xml  test.py
Perception/Yolo/yolo_ws/src/yolo_infer/config/: defaults.yaml
Perception/Yolo/yolo_ws/src/yolo_infer/launch/: yolo_infer.launch.py
Perception/Yolo/yolo_ws/src/yolo_infer/src/: yolo_infer.cpp
Perception/eufs_perception_starters/camera_ws/: README.md
Perception/eufs_perception_starters/camera_ws/src/camera/: CMakeLists.txt  README.md  package.xml
Perception/eufs_perception_starters/camera_ws/src/camera/config/: defaults.yaml
Perception/eufs_perception_starters/camera_ws/src/camera/launch/: camera.launch.py
Perception/eufs_perception_starters/camera_ws/src/camera/src/: camera.cpp
Perception/eufs_perception_starters/gps_ws/: README.md
Perception/eufs_perception_starters/gps_ws/src/gps/: CMakeLists.txt  package.xml
Perception/eufs_perception_starters/gps_ws/src/gps/config/: defaults.yaml
Perception/eufs_perception_starters/gps_ws/src/gps/launch/: gps.launch.py
Perception/eufs_perception_starters/gps_ws/src/gps/src/: gps.cpp
Perception/eufs_perception_starters/imu_ws/: README.md
Perception/eufs_perception_starters/imu_ws/src/imu/: CMakeLists.txt  package.xml
Perception/eufs_perception_starters/imu_ws/src/imu/config/: defaults.yaml
Perception/eufs_perception_starters/imu_ws/src/imu/launch/: imu.launch.py
Perception/eufs_perception_starters/imu_ws/src/imu/src/: imu.cpp
Perception/eufs_perception_starters/lidar_ws/: README.md
Perception/eufs_perception_starters/lidar_ws/src/lidar/: CMakeLists.txt  package.xml
Perception/eufs_perception_starters/lidar_ws/src/lidar/config/: defaults.yaml
Perception/eufs_perception_starters/lidar_ws/src/lidar/launch/: lidar.launch.py
Perception/eufs_perception_starters/lidar_ws/src/lidar/src/: lidar.cpp
