<?xml version="1.0"?>
<package format="3">
  <name>static_a</name>
  <version>0.1.0</version>
  <description>Static Inspection A node (publishes Ackermann commands)</description>

  <maintainer email="tyler@tyler.com">Tyler</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ackermann_msgs</depend>
  <depend>eufs_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

