<?xml version="1.0"?>
<package format="3">
  <name>yolo_depth</name>
  <version>0.1.0</version>
  <description>YOLO TorchScript inference with depth-in-metres caption overlay</description>
  <maintainer email="you@example.com">NOTTSAIR</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
