<?xml version="1.0"?>
<package format="3">
  <name>yolo_infer</name>
  <version>0.1.0</version>
  <description>YOLO TorchScript inference in C++ with LibTorch</description>
  <maintainer email="you@example.com">NOTTSAIR</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

