<?xml version="1.0"?>
<package format="3">
  <name>camera</name>
  <version>0.1.0</version>
  <description>Four camera mosaic viewer</description>
  <maintainer email="you@example.com">NOTTSAIR</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>

